--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Gesamtpreis:
 subprdOriginalPriceTitle=Original Preis:
 subprdSaveTitle=Gerettet:
 peripheralProductsTitle=Gerade Angesagt
+BuyNowBtn=Kaufe Jetzt
 
 FAQ1Title=Muss ich ein Konto erstellen?
 FAQ1Desc1=Ja, Sie müssen ein Konto bei uns erstellen, um Ihr Einkaufserlebnis einfacher und schneller zu gestalten. Durch das Erstellen eines Kontos können Sie:
