--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Precio Total:
 subprdOriginalPriceTitle=Precio original:
 subprdSaveTitle=Salvado:
 peripheralProductsTitle=Siendo Tendencia Ahora
+BuyNowBtn=Compra Ahora
 
 FAQ1Title=¿Necesito crear una cuenta?
 FAQ1Desc1=Sí, necesitamos que cree una cuenta con nosotros para que su experiencia de compra sea más fácil y rápida. Al crear una cuenta podrá:
