--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Prix Total:
 subprdOriginalPriceTitle=Prix d'origine:
 subprdSaveTitle=Enregistré:
 peripheralProductsTitle=À la Mode Maintenant
+BuyNowBtn=Acheter Maintenant
 
 FAQ1Title=dois-je créer un compte?
 FAQ1Desc1=Oui, nous avons besoin de vous pour créer un compte avec nous pour rendre votre expérience d'achat plus facile et plus rapide. En créant un compte, vous pourrez:
