--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Prezzo Totale:
 subprdOriginalPriceTitle=Prezzo Originale:
 subprdSaveTitle=Salvato:
 peripheralProductsTitle=In Voga
+BuyNowBtn=Acquista Ora
 
 FAQ1Title=devo creare un account?
 FAQ1Desc1=Sì, abbiamo bisogno che tu crei un account con noi per rendere la tua esperienza di acquisto più semplice e veloce. Creando un account sarai in grado di:
