--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Totale Prijs:
 subprdOriginalPriceTitle=Originele Prijs:
 subprdSaveTitle=Opgeslagen:
 peripheralProductsTitle=Nu Trending
+BuyNowBtn=Koop Nu
 
 FAQ1Title=moet ik een account aanmaken?
 FAQ1Desc1=Ja, we hebben je nodig om een account bij ons aan te maken om je winkelervaring gemakkelijker en sneller te maken. Door een account aan te maken, kunt u:
