--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Łączna Cena:
 subprdOriginalPriceTitle=Oryginalna Cena:
 subprdSaveTitle=Zapisano:
 peripheralProductsTitle=Modne Teraz
+BuyNowBtn=Kup Teraz
 
 FAQ1Title=czy muszę założyć konto?
 FAQ1Desc1=Tak, musisz założyć u nas konto, aby zakupy były łatwiejsze i szybsze. Tworząc konto będziesz mógł:
