--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Preço Total:
 subprdOriginalPriceTitle=Preço Original:
 subprdSaveTitle=Salvou:
 peripheralProductsTitle=Tendências Agora
+BuyNowBtn=Compre Agora
 
 FAQ1Title=preciso criar uma conta?
 FAQ1Desc1=Sim, precisamos que você crie uma conta conosco para tornar sua experiência de compra mais fácil e rápida. Ao criar uma conta, você será capaz de:
