--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Totalbelopp:
 subprdOriginalPriceTitle=Original Pris:
 subprdSaveTitle=Sparad:
 peripheralProductsTitle=Trendar Nu
+BuyNowBtn=Köp Nu
 
 FAQ1Title=behöver jag skapa ett konto?
 FAQ1Desc1=Ja, vi behöver att du skapar ett konto hos oss för att göra din shoppingupplevelse enklare och snabbare. Genom att skapa ett konto kan du:
