--- a/locale/strings_en.properties
+++ b/locale/strings_en.properties
@@ -61,6 +61,7 @@ subprdCurrentPriceTitle=Total Price:
 subprdOriginalPriceTitle=Original Price:
 subprdSaveTitle=Saved:
 peripheralProductsTitle=Trending Now
+BuyNowBtn=Buy Now
 
 FAQ1Title=do i need to create a account?
 FAQ1Desc1=Yes, we need you to create an account with us to make your shopping experience easier and faster. By creating an account you will be able to:
