修改支付后的样式问题

--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -215,6 +215,8 @@ Continue=Fortsetzen
 WhatIsThis=Was ist das?
 Close=Schließen
 PayNow=bezahlen jetzt
+CreditCard=Kreditkarte
+DebitCard=Debitkarte
 CreditRecommend=Die Rechnungsadresse sollte mit der Adresse auf Ihrer Kreditkartenabrechnung übereinstimmen. Sie können die Rechnungsadresse ändern, indem Sie auf die Bearbeiten-Schaltfläche klicken.
 
 # my_account
