--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -215,6 +215,8 @@ Continue=Continuar
 WhatIsThis=¿Qué es esto?
 Close=Cerrar
 PayNow=Pagar ahora
+CreditCard=Tarjeta de crédito
+DebitCard=Tarjeta de débito
 CreditRecommend=La dirección de facturación debe coincidir con la establecida en el contrato de su tarjeta.
 
 # my_account
