--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -215,6 +215,8 @@ Continue=Continuer
 WhatIsThis=Qu'est-ce que c'est?
 Close=Fermer
 PayNow=Payez maintenant
+CreditCard=Carte de crédit
+DebitCard=Carte de débit
 CreditRecommend=L'adresse de facturation doit correspondre à l'adresse indiquée sur votre relevé de carte de crédit. Vous pouvez modifier l'adresse de facturation en cliquant sur le bouton Modifier.
 
 # my_account
