--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -215,6 +215,8 @@ Continue=Continua
 WhatIsThis=Cos'è?
 Close=Chiudi
 PayNow=Paga Adesso
+CreditCard=Carta di credito
+DebitCard=Carta di debito
 CreditRecommend=L'indirizzo di fatturazione dovrebbe corrispondere all'indirizzo della carta di credito. Puoi cambiare l'indirizzo cliccando su Cambia
 
 # my_account=
