--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -215,6 +215,8 @@ Continue=Doorgaan
 WhatIsThis=Wat is dit?
 Close=Sluiten
 PayNow=Betaal nu
+CreditCard=Kredietkaart
+DebitCard=Debetkaart
 CreditRecommend=Het factuuradres moet overeenkomen met het adres op uw creditcardafschrift. U kunt het factuuradres wijzigen door op de knop "bewerken" te klikken.
 
 # my_account
