--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -215,6 +215,8 @@ Continue=Kontynuuj
 WhatIsThis=Co to jest?
 Close=Zamknij
 PayNow=Zapłać teraz
+CreditCard=Karta kredytowa
+DebitCard=Karta debetowa
 CreditRecommend=Adres rozliczeniowy powinien być zgodny z adresem podanym na wyciągu z karty kredytowej. Możesz zmienić adres rozliczeniowy, klikając przycisk edycji.
 
 # my_account
