--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -215,6 +215,8 @@ Continue=Continuar
 WhatIsThis=O que é isso aí？
 Close=Fechar
 PayNow=Pagar agora
+CreditCard=Cartão de crédito
+DebitCard=Cartão de débito
 CreditRecommend=O endereço de faturação deve ser o mesmo que o endereço no sistema do cartão de crédito
 
 # my_account
