--- a/locale/strings.properties
+++ b/locale/strings.properties
@@ -215,6 +215,8 @@ Continue=Continue
 WhatIsThis=What is this？
 Close=Close
 PayNow=Pay Now
+CreditCard=Credit Card
+DebitCard=Debit Card
 CreditRecommend=The billing address should match the address on your credit card statement. You can change the billing address by clicking the edit button.
 
 # my_account
