--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -215,6 +215,8 @@ Continue=Fortsätt
 WhatIsThis=Vad är det?
 Close=Sluta
 PayNow=Betala nu
+CreditCard=Kreditkort
+DebitCard=Kontokort
 CreditRecommend=Faktureringsadressen måste matcha adressen på ditt kreditkortsutlåtande. Du kan oackså ändra din faktureringsadressen genom att klicka på redigeringsknappen.
 
 # my_account
