1.添加延迟发货提示

--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Vor Kurzem angesehen
 Code=Code
 maxErrorMsg1=Die Anzahl Ihrer Warenkorbartikel ist größer als die maximal zulässige Gesamtanzahl
 maxErrorMsg2=. Sie können erst dann auschecken, wenn das Problem gelöst ist!
+logisticsMessage1=Aufgrund der Covid-Epidemie wird Ihre Bestellung am 20. Januar 2021 versendet.
+logisticsMessage2=Aufgrund der verspäteten Lieferung gewähren wir Ihnen einen zusätzlichen Rabatt von 10% für Ihre Bestellung.
 
 # check_shipping
 ShippingAddress=Lieferanschrift
