--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Cercati di recente
 Code=Codice 
 maxErrorMsg1=Il numero totale nel carrello è maggiore del massimo consentito
 maxErrorMsg2=. Non potrai acquistare finché non sarà risolto!
+logisticsMessage1=A causa dell'epidemia di covid, il tuo ordine verrà spedito il 20 gennaio 2021.
+logisticsMessage2=Ti daremo un ulteriore sconto del 10% per il tuo ordine a causa della spedizione ritardata.
 
 # check_shipping=#controlla spedizione
 ShippingAddress=Indirizzo Spedizione
