--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Ostatnio oglądane
 Code=Kod 
 maxErrorMsg1=Liczba przedmiotów w koszyku jest większa niż dozwolona, maksymalna suma to
 maxErrorMsg2=. Zamówienie nie będzie mogło zostać zrealizowane zanim problem nie zostanie rozwiązany!
+logisticsMessage1=Z powodu epidemii COVID Twoje zamówienie zostanie wysłane 20 stycznia 2021 roku.
+logisticsMessage2=Damy Ci dodatkowe 10% zniżki na Twoje zamówienie z powodu opóźnionej wysyłki.
 
 # check_shipping
 ShippingAddress=Adres odbiorcy przesyłki
