--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Pesquisas recentes
 Code=Código
 maxErrorMsg1=O número de produtos na cesta é maior do total permitido de
 maxErrorMsg2=. Você não poderá pagar até resolver o problema.
+logisticsMessage1=Devido à epidemia de covid, seu pedido será enviado em 20 de janeiro de 2021.
+logisticsMessage2=Nós lhe daremos um desconto adicional de 10% para seu pedido devido ao atraso no envio.
 
 # check_shipping
 ShippingAddress=Endereço de frete
