--- a/locale/strings.properties
+++ b/locale/strings.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Recently browse
 Code=Code
 maxErrorMsg1=Your cart item count is greater than the allowed maximum total of
 maxErrorMsg2=. You will not be able to checkout until resolved!
+logisticsMessage1=Due to covid epidemic, your order will be shipped on January 20, 2021.
+logisticsMessage2=We will give you an additional 10% discount for your order due to the delayed shipment.
 
 # check_shipping
 ShippingAddress=Shipping Address
