--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Laatst opgezocht
 Code=Code
 maxErrorMsg1=Het aantal items in uw winkelwagen is groter dan het toegestane maximumtotaal
 maxErrorMsg2=U kunt pas afrekenen nadat het probleem is opgelost!
+logisticsMessage1=Wegens covidepidemie wordt je bestelling verzonden op 20 januari 2021.
+logisticsMessage2=We geven je 10% extra korting op je bestelling vanwege de vertraagde verzending.
 
 # check_shipping
 ShippingAddress=Verzend adres
