--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -164,6 +164,8 @@ RecentlyBrowseTitle=Kollade nyss på
 Code=Kod
 maxErrorMsg1=Antalet överskrider det tillåtna maximala orderbeloppet av
 maxErrorMsg2=. Du får inte checka ut tills det har lösas!
+logisticsMessage1=På grund av kovidepidemi skickas din beställning den 20 januari 2021.
+logisticsMessage2=Vi ger dig ytterligare 10% rabatt på din beställning på grund av den försenade leveransen.
 
 # check_shipping
 ShippingAddress=Leveransadress
