1.修改延迟发货时间

--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -164,7 +164,7 @@ RecentlyBrowseTitle=Búsquedas recientes
 Code=Código
 maxErrorMsg1=La cantidad de productos en el carrito es mayor a la permitida
 maxErrorMsg2=. No podrá pagar hasta que se resuelva!
-logisticsMessage1=Debido a la epidemia de covid, su pedido se enviará el 20 de enero de 2021.
+logisticsMessage1=Debido a la epidemia de covid, su pedido se enviará el 20 de febrero de 2021.
 logisticsMessage2=Le daremos un descuento adicional del 10% para su pedido debido al retraso en el envío.
 
 # check_shipping
