--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -164,7 +164,7 @@ RecentlyBrowseTitle=Récemment parcouru
 Code=Code
 maxErrorMsg1=Le nombre d'articles de votre panier est supérieur au total maximum autorisé de
 maxErrorMsg2=. Vous ne pourrez pas payer avant que ce soit résolu!
-logisticsMessage1=En raison de l'épidémie de covid, votre commande sera expédiée le 20 janvier 2021.
+logisticsMessage1=En raison de l'épidémie de covid, votre commande sera expédiée le 20 février 2021.
 logisticsMessage2=Nous vous offrirons une remise supplémentaire de 10% sur votre commande en raison du retard de l'expédition.
 
 # check_shipping
