--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -164,7 +164,7 @@ RecentlyBrowseTitle=Laatst opgezocht
 Code=Code
 maxErrorMsg1=Het aantal items in uw winkelwagen is groter dan het toegestane maximumtotaal
 maxErrorMsg2=U kunt pas afrekenen nadat het probleem is opgelost!
-logisticsMessage1=Wegens covidepidemie wordt je bestelling verzonden op 20 januari 2021.
+logisticsMessage1=Vanwege de covidepidemie wordt uw bestelling op 20 februari 2021 verzonden.
 logisticsMessage2=We geven je 10% extra korting op je bestelling vanwege de vertraagde verzending.
 
 # check_shipping
