--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -211,12 +211,16 @@ CVV=CVN
 Month=Monat
 Year=Jahr
 CardNumErrorMsg=Geben Sie die korrekte Kartennummer ein
+CardNumErrorMsgM=Geben Sie die korrekte Masterkartennummer ein
+CardNumErrorMsgV=Geben Sie die korrekte Visa-Kartennummer ein
 CvvErrorMsg=Geben Sie die korrekte CVN ein
 MonthYearErrorMsg=Bitte wählen Sie das Verfallsdatum aus
 Continue=Fortsetzen
 WhatIsThis=Was ist das?
 Close=Schließen
 PayNow=bezahlen jetzt
+MASTERCARD=MASTER KARTE
+VISACARD=VISA KARTE
 CreditCard=Kreditkarte
 DebitCard=Debitkarte
 CreditRecommend=Die Rechnungsadresse sollte mit der Adresse auf Ihrer Kreditkartenabrechnung übereinstimmen. Sie können die Rechnungsadresse ändern, indem Sie auf die Bearbeiten-Schaltfläche klicken.
@@ -310,6 +314,8 @@ ViewOrder=Bestellungen ansehen
 FailReason1=Sehr geehrte Kunden
 FailReason2=Es tut uns sehr leid, dass sich die Zahlung verzögert hat, als Sie mit VISA bezahlt haben. Bitte warten Sie und machen Sie sich keine Sorgen. Sobald die Bestellung erfolgreich bezahlt wurde, erhalten Sie eine Bestätigungs-E-Mail.
 FailReason3=Oder Sie können sicher versuchen, mit MasterCard zu zahlen. Wenn die MasterCard-Zahlung erfolgreich ist, stornieren wir Ihre VISA-Zahlung und garantieren, dass Sie nur einmal für eine Bestellung erfolgreich bezahlen.
+FailReason4=Es tut uns wirklich leid, dass die von Ihnen mit VISA bezahlte Zahlung fehlgeschlagen ist, da derzeit etwas mit unserer VISA-Zahlungsmethode nicht stimmt.<br>Wir freuen uns, wenn Sie versuchen können, es erneut mit MasterCard zu bezahlen und EXTRA 10% RABATT erhalten. Nach erfolgreicher Zahlung wird eine Bestätigungs-E-Mail gesendet. Die Bestellung wird Ihnen nur einmal in Rechnung gestellt. Vielen Dank!
+FailReason5=Es tut uns wirklich leid, dass die von Ihnen mit VISA bezahlte Zahlung fehlgeschlagen ist, da derzeit etwas mit unserer VISA-Zahlungsmethode nicht stimmt.<br>Wir freuen uns, wenn Sie versuchen können, es erneut mit MasterCard zu bezahlen. Nach erfolgreicher Zahlung wird eine Bestätigungs-E-Mail gesendet. Die Bestellung wird Ihnen nur einmal in Rechnung gestellt. Vielen Dank!
 
 FailTipsTitle=Tipps für Zahlungsergebnisse
 FailTips1=Warum zeigt Ihre Bestellung einen Zahlungsfehler?
