--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -211,12 +211,16 @@ CVV=Code de sécurité
 Month=Mois
 Year=Année
 CardNumErrorMsg=Entrez le bon numéro de carte
+CardNumErrorMsgM=Entrez le bon numéro de carte maître
+CardNumErrorMsgV=Entrez le bon numéro de carte visa
 CvvErrorMsg=Entrez le bon Code de sécurité
 MonthYearErrorMsg=Veuillez sélectionner la date d'expiration
 Continue=Continuer
 WhatIsThis=Qu'est-ce que c'est?
 Close=Fermer
 PayNow=Payez maintenant
+MASTERCARD=MASTER CARTE
+VISACARD=VISA CARTE
 CreditCard=Carte de crédit
 DebitCard=Carte de débit
 CreditRecommend=L'adresse de facturation doit correspondre à l'adresse indiquée sur votre relevé de carte de crédit. Vous pouvez modifier l'adresse de facturation en cliquant sur le bouton Modifier.
@@ -310,6 +314,8 @@ ViewOrder=Voir la commande
 FailReason1=Chers clients
 FailReason2=Nous sommes vraiment désolés que le paiement soit retardé lorsque vous avez payé par VISA. Veuillez patienter et soyez sans crainte, un courriel de confirmation vous sera envoyé une fois la commande payée.
 FailReason3=Sinon, vous pouvez aussi essayer de payer par MasterCard et si le paiement par MasterCard aboutit, nous annulerons votre paiement VISA et vous garantissons de ne payer qu'une fois pour une seule commande.
+FailReason4=Nous sommes vraiment désolés que le paiement que vous avez payé par VISA ait échoué car il y a actuellement un problème avec notre méthode de paiement VISA.<br>Nous apprécions si vous pouvez essayer de le payer à nouveau par MasterCard et profitez d'une remise supplémentaire de 10%. Une fois le paiement réussi, un e-mail de confirmation vous sera envoyé. Vous ne serez facturé qu'une seule fois pour la commande. Je vous remercie!
+FailReason5=Nous sommes vraiment désolés que le paiement que vous avez payé par VISA ait échoué car il y a actuellement un problème avec notre méthode de paiement VISA.<br>Nous apprécions que vous puissiez essayer de le payer à nouveau par MasterCard. Une fois le paiement réussi, un e-mail de confirmation vous sera envoyé. Vous ne serez facturé qu'une seule fois pour la commande. Je vous remercie!
 
 FailTipsTitle=Conseils pour les résultats de paiement
 FailTips1=Pourquoi votre commande indique-t-elle un échec de paiement?
