--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -211,12 +211,16 @@ CVV=CVN
 Month=Mese
 Year=Anno 
 CardNumErrorMsg=Inserisci numero di carta corretto 
+CardNumErrorMsgM=Immettere il numero di carta principale corretto
+CardNumErrorMsgV=Inserisci il numero di carta visa corretto
 CvvErrorMsg=Inserisci il CVN corretto
 MonthYearErrorMsg=Prego Inserire Scadenza
 Continue=Continua
 WhatIsThis=Cos'è?
 Close=Chiudi
 PayNow=Paga Adesso
+MASTERCARD=MASTER CARTA
+VISACARD=VISA CARTA
 CreditCard=Carta di credito
 DebitCard=Carta di debito
 CreditRecommend=L'indirizzo di fatturazione dovrebbe corrispondere all'indirizzo della carta di credito. Puoi cambiare l'indirizzo cliccando su Cambia
@@ -310,6 +314,8 @@ ViewOrder=Vedi ordine
 FailReason1=Cari Clienti
 FailReason2=Siamo davvero spiacenti che il pagamento VISA sia stato ritardato, ma non ti preoccupare. Una mail di conferma ti sarà inviata a pagamento effettuato
 FailReason3=Oppure puoi provare a pagare con MasterCard. Se il pagamento MasterCard andrà a buon fine, cancelleremo il tuo pagamento VISA e garantiremo che tu paghi solo una volta per ordine. 
+FailReason4=Ci dispiace davvero che il pagamento pagato da VISA non sia andato a buon fine perché al momento il nostro metodo di pagamento VISA presenta qualcosa di sbagliato.<br>Ti saremo grati se puoi provare a pagare di nuovo con MasterCard e usufruire di uno SCONTO DEL 10% EXTRA. Una volta che il pagamento ha esito positivo, verrà inviata un'email di conferma. L'ordine verrà addebitato una sola volta. Grazie!
+FailReason5=Ci dispiace davvero che il pagamento pagato da VISA non sia andato a buon fine perché al momento il nostro metodo di pagamento VISA presenta qualcosa di sbagliato.<br>Ti saremo grati se puoi provare a pagare di nuovo con MasterCard. Una volta che il pagamento ha esito positivo, verrà inviata un'email di conferma. L'ordine verrà addebitato una sola volta. Grazie!
 
 FailTipsTitle=Suggerimenti per i risultati del pagamento
 FailTips1=Perché il tuo ordine mostra un pagamento non riuscito?
