--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -211,12 +211,16 @@ CVV=CVV2/CSC
 Month=Maand
 Year=Jaar
 CardNumErrorMsg=Voer het juiste kaartnummer in
+CardNumErrorMsgM=Voer het juiste masterkaartnummer in
+CardNumErrorMsgV=Voer het juiste visumkaartnummer in
 CvvErrorMsg=Voer de juiste CVV2 / CSC in
 MonthYearErrorMsg=Selecteer Vervaldatum
 Continue=Doorgaan
 WhatIsThis=Wat is dit?
 Close=Sluiten
 PayNow=Betaal nu
+MASTERCARD=MASTER KAART
+VISACARD=VISA KAART
 CreditCard=Kredietkaart
 DebitCard=Debetkaart
 CreditRecommend=Het factuuradres moet overeenkomen met het adres op uw creditcardafschrift. U kunt het factuuradres wijzigen door op de knop "bewerken" te klikken.
@@ -310,6 +314,8 @@ ViewOrder=Bekijk bestelling
 FailReason1=Geachte klanten
 FailReason2=Het spijt ons zeer dat de betaling is vertraagd toen u via VISA betaalde. Houdt u even aan terwijl wij een bevestigingsmail naar u opsturen zodra de bestelling met succes is betaald.
 FailReason3=Of u kunt zeker proberen te betalen met uw MasterCard en als de MasterCard-betaling slaagt, zullen we uw VISA-betaling annuleren en garanderen dat u slechts één keer voor één bestelling met succes betaalt.
+FailReason4=Het spijt ons echt dat de betaling die u met VISA heeft betaald, is mislukt omdat er momenteel iets mis is met onze VISA-betalingsmethode.<br>We stellen het op prijs als u kunt proberen het opnieuw te betalen met MasterCard en te genieten van 10% EXTRA KORTING. Zodra de betaling is geslaagd, wordt er een bevestigingsmail verzonden. U betaalt slechts één keer voor de bestelling. Dank je!
+FailReason5=Het spijt ons echt dat de betaling die u met VISA heeft betaald, is mislukt omdat er momenteel iets mis is met onze VISA-betalingsmethode.<br>We stellen het op prijs als u kunt proberen het opnieuw te betalen met MasterCard. Zodra de betaling is geslaagd, wordt er een bevestigingsmail verzonden. U betaalt slechts één keer voor de bestelling. Dank je!
 
 FailTipsTitle=Tips voor betalingsresultaten
 FailTips1=Waarom vertoont uw bestelling een betalingsfout?
