--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -211,12 +211,16 @@ CVV=CVV2/CSC
 Month=Miesiąc
 Year=Rok
 CardNumErrorMsg=Wpisz poprawny numer karty
+CardNumErrorMsgM=Wprowadź poprawny numer karty głównej
+CardNumErrorMsgV=Wpisz poprawny numer karty wizowej
 CvvErrorMsg=Wpisz poprawny CVV2/CSC
 MonthYearErrorMsg=Wybierz datę ważności
 Continue=Kontynuuj
 WhatIsThis=Co to jest?
 Close=Zamknij
 PayNow=Zapłać teraz
+MASTERCARD=MASTER KARTA
+VISACARD=VISA KARTA
 CreditCard=Karta kredytowa
 DebitCard=Karta debetowa
 CreditRecommend=Adres rozliczeniowy powinien być zgodny z adresem podanym na wyciągu z karty kredytowej. Możesz zmienić adres rozliczeniowy, klikając przycisk edycji.
@@ -310,6 +314,8 @@ ViewOrder=Pokaż zamówienie
 FailReason1=Drogi kliencie
 FailReason2=Bardzo nam przykro, że płatność opóźniła się, gdy płaciłeś kartą VISA. Proszę czekać i nie martwić się, wiadomość e-mail z potwierdzeniem zostanie wysłana do Ciebie po pomyślnym opłaceniu zamówienia.
 FailReason3=Możesz także spróbować zapłacić kartą MasterCard. W przypadku powodzenia Twoja płatność VISA zostanie anulowana i zagwarantujemy, że za zamówienie zapłacisz tylko raz.
+FailReason4=Bardzo nam przykro, że płatność zapłacona przez VISA nie powiodła się, ponieważ w naszej metodzie płatności VISA wystąpił błąd.<br>Jesteśmy wdzięczni, jeśli możesz spróbować ponownie zapłacić kartą MasterCard i cieszyć się DODATKĄ 10% ZNIŻKĄ. Po pomyślnym zakończeniu płatności zostanie wysłany e-mail z potwierdzeniem. Opłata zostanie naliczona tylko raz za zamówienie. Dziękuję Ci!
+FailReason5=Bardzo nam przykro, że płatność zapłacona przez VISA nie powiodła się, ponieważ w naszej metodzie płatności VISA wystąpił błąd.<br>Jesteśmy wdzięczni, jeśli możesz spróbować ponownie zapłacić kartą MasterCard. Po pomyślnym zakończeniu płatności zostanie wysłany e-mail z potwierdzeniem. Opłata zostanie naliczona tylko raz za zamówienie. Dziękuję Ci!
 
 FailTipsTitle=Wskazówki dotyczące wyników płatności
 FailTips1=Dlaczego na Twoim zamówieniu widać niepowodzenie płatności?
