--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -211,12 +211,16 @@ CVV=CVV2/CSC
 Month=Mês
 Year=Ano
 CardNumErrorMsg=Escreva um número de cartão válido
+CardNumErrorMsgM=Digite o número correto do cartão principal
+CardNumErrorMsgV=Digite o número correto do cartão Visa
 CvvErrorMsg=Escreva um CVV2/CSC válido
 MonthYearErrorMsg=Escolha uma data de expiração
 Continue=Continuar
 WhatIsThis=O que é isso aí？
 Close=Fechar
 PayNow=Pagar agora
+MASTERCARD=MASTER CARTÃO
+VISACARD=VISA CARTÃO
 CreditCard=Cartão de crédito
 DebitCard=Cartão de débito
 CreditRecommend=O endereço de faturação deve ser o mesmo que o endereço no sistema do cartão de crédito
@@ -310,6 +314,8 @@ ViewOrder=Ver pedido
 FailReason1=Prezado cliente
 FailReason2=Lamentamos que seu pagamento com VISA tenha sido retrasado. Por favor, espere sem se preocupar, um e-mail de confirmação será enviado assim que o pedido seja pago.
 FailReason3=Ou pode tentar pagar com MasterCard e, se o pagamento for realizado, cancelaremos o pagamento com VISA e garantimos você que só pagará um dos pedidos.
+FailReason4=Lamentamos muito que o pagamento que você pagou pela VISA tenha falhado porque há algo errado com nossa forma de pagamento VISA no momento.<br>Agradecemos se você puder tentar pagá-lo novamente pela MasterCard e aproveitar 10% de desconto extra. Quando o pagamento for bem-sucedido, um e-mail de confirmação será enviado. Você será cobrado apenas uma vez pelo pedido. Obrigado!
+FailReason5=Lamentamos muito que o pagamento que você pagou pela VISA tenha falhado porque há algo errado com nossa forma de pagamento VISA no momento.<br>Agradecemos se você puder tentar pagá-lo novamente pela MasterCard. Quando o pagamento for bem-sucedido, um e-mail de confirmação será enviado. Você será cobrado apenas uma vez pelo pedido. Obrigado!
 
 FailTipsTitle=Dicas para resultados de pagamento
 FailTips1=Por que seu pedido mostra falha no pagamento?
