--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -211,12 +211,16 @@ CVV=CVC
 Month=Månad
 Year=År
 CardNumErrorMsg=Ange ditt kortnummer korrekt
+CardNumErrorMsgM=Ange rätt huvudkortnummer
+CardNumErrorMsgV=Ange rätt visakortsnummer
 CvvErrorMsg=Ange din CVC korrekt
 MonthYearErrorMsg=Vänligen välj utgångsdatum
 Continue=Fortsätt
 WhatIsThis=Vad är det?
 Close=Sluta
 PayNow=Betala nu
+MASTERCARD=MASTER KORT
+VISACARD=VISA KORT
 CreditCard=Kreditkort
 DebitCard=Kontokort
 CreditRecommend=Faktureringsadressen måste matcha adressen på ditt kreditkortsutlåtande. Du kan oackså ändra din faktureringsadressen genom att klicka på redigeringsknappen.
@@ -310,6 +314,8 @@ ViewOrder=Gå till kassan
 FailReason1=Kära kunder
 FailReason2=Vi är verkligen ledsna att betalningen försenades när du betalade med VISA. Men vänta och oroa dig inte. Ett bekräftelsemail skickas till dig när beställningen har lyckas med att betalats.
 FailReason3=Du kan också försöka betala med ett Master kort. Om betalningen lyckas, kommer vi att avbryta din VISA-betalning och vi garantera att du bara betalar en gång för din betällning.
+FailReason4=Vi är verkligen ledsna att den betalning du betalade av VISA misslyckades eftersom det är något fel med vår VISA betalningsmetod för närvarande.<br>Vi uppskattar om du kan försöka betala det igen med MasterCard och njuta av EXTRA 10% RABATT. När betalningen har lyckats skickas ett bekräftelsemeddelande. Du debiteras endast en gång för beställningen. Tack!
+FailReason5=Vi är verkligen ledsna att den betalning du betalade av VISA misslyckades eftersom det är något fel med vår VISA betalningsmetod för närvarande.<br>Vi uppskattar om du kan försöka betala det igen av MasterCard. När betalningen har lyckats skickas ett bekräftelsemeddelande. Du debiteras endast en gång för beställningen. Tack!
 
 FailTipsTitle=Tips för betalningsresultat
 FailTips1=Varför visar din beställning misslyckande?
