--- a/locale/strings_en.properties
+++ b/locale/strings_en.properties
@@ -211,12 +211,16 @@ CVV=CVV2/CSC
 Month=Month
 Year=Year
 CardNumErrorMsg=Enter the correct card number
+CardNumErrorMsgM=Enter the correct master card number
+CardNumErrorMsgV=Enter the correct visa card number
 CvvErrorMsg=Enter the correct CVV2/CSC
 MonthYearErrorMsg=Please Select Expiration Date
 Continue=Continue
 WhatIsThis=What is this？
 Close=Close
 PayNow=Pay Now
+MASTERCARD=MASTER CARD
+VISACARD=VISA CARD
 CreditCard=Credit Card
 DebitCard=Debit Card
 CreditRecommend=The billing address should match the address on your credit card statement. You can change the billing address by clicking the edit button.
@@ -310,6 +314,8 @@ ViewOrder=View order
 FailReason1=Dear Customers
 FailReason2=We are really sorry that the payment delayed when you paid by VISA. But please wait and don''t worry, a confirmation email will be sent to you once the order is successfully paid.
 FailReason3=Or you can surely try to pay by MasterCard and if the MasterCard payment succeeds, we will cancel your VISA payment and guarantee you only pay successfully once for one order.
+FailReason4=We are really sorry that the payment you paid by VISA was failed because there is something wrong with our VISA payment method at present.<br>We appreciate if you can try to pay it again by MasterCard and enjoy EXTRA 10% OFF. Once the payment is successful, a confirmation email will be sent. You will be only charged once for the order. Thank you!
+FailReason5=We are really sorry that the payment you paid by VISA was failed because there is something wrong with our VISA payment method at present.<br>We appreciate if you can try to pay it again by MasterCard. Once the payment is successful, a confirmation email will be sent. You will be only charged once for the order. Thank you!
 
 FailTipsTitle=Tips for payment results
 FailTips1=Why does your order show payment failure?
