--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -211,12 +211,16 @@ CVV=CVN
 Month=Mes
 Year=Año
 CardNumErrorMsg=Ingrese número de tarjeta válido
+CardNumErrorMsgM=Ingrese el número de tarjeta maestra correcto
+CardNumErrorMsgV=Ingrese el número de tarjeta de visa correcto
 CvvErrorMsg=Ingrese CVN válido
 MonthYearErrorMsg=Seleccione fecha de vencimiento
 Continue=Continuar
 WhatIsThis=¿Qué es esto?
 Close=Cerrar
 PayNow=Pagar ahora
+MASTERCARD=MASTER TARJETA
+VISACARD=VISA TARJETA
 CreditCard=Tarjeta de crédito
 DebitCard=Tarjeta de débito
 CreditRecommend=La dirección de facturación debe coincidir con la establecida en el contrato de su tarjeta.
@@ -310,6 +314,8 @@ ViewOrder=Ver pedido
 FailReason1=Queridos clientes
 FailReason2=Sentimos mucho el retraso de los pagos con tarjeta VISA. Por favor, esperen y no se preocupen. Un correo de confirmación se les enviará una vez el pedido se haya pagado.
 FailReason3=O pueden intentar pagar con MasterCard. Si este pago es confirmado, cancelaremos el pago de la tarjeta VISA y garantizaremos que Ud. solo pagará un pedido.
+FailReason4=Realmente lamentamos que el pago que pagó con VISA haya fallado porque actualmente hay algún problema con nuestro método de pago con VISA.<br>Agradecemos si puede intentar pagarlo nuevamente con MasterCard y disfrutar de un 10% DE DESCUENTO ADICIONAL. Una vez que el pago se realiza correctamente, se enviará un correo electrónico de confirmación. Solo se le cobrará una vez por el pedido. ¡Gracias!
+FailReason5=Realmente lamentamos que el pago que pagó con VISA haya fallado porque actualmente hay algún problema con nuestro método de pago con VISA.<br>Agradecemos si puede intentar pagarlo nuevamente con MasterCard. Una vez que el pago se realiza correctamente, se enviará un correo electrónico de confirmación. Solo se le cobrará una vez por el pedido. ¡Gracias!
 
 FailTipsTitle=Consejos para los resultados del pago
 FailTips1=¿Por qué su pedido muestra una falla en el pago?
