1.添加延迟发货的同意勾选功能

--- a/locale/strings_de.properties
+++ b/locale/strings_de.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Vor Kurzem angesehen
 Code=Code
 maxErrorMsg1=Die Anzahl Ihrer Warenkorbartikel ist größer als die maximal zulässige Gesamtanzahl
 maxErrorMsg2=. Sie können erst dann auschecken, wenn das Problem gelöst ist!
-logisticsMessage1=Aufgrund der Covid-Epidemie wird Ihre Bestellung am 20. Februar 2021 versendet.
+logisticsMessage1=Aufgrund der Covid-Epidemie wird Ihre Bestellung am 15. Februar 2021 versendet.
 logisticsMessage2=Aufgrund der verspäteten Lieferung gewähren wir Ihnen einen zusätzlichen Rabatt von 10% für Ihre Bestellung.
+logisticsMessage3=Einverstanden mit den folgenden Bedingungen
+logisticsMessage4=1. Bestellungen werden ab dem 15. Februar 2021 versendet
+logisticsMessage5=2. Die Rückerstattung für stornierte Bestellungen wird nach dem 15. Februar 2021 bearbeitet
+logisticsMessage6=Aufgrund der Pandemiesituation, wählen Sie bitte die entsprechenden Begriffe
 
 # check_shipping
 ShippingAddress=Lieferanschrift
