--- a/locale/strings_it.properties
+++ b/locale/strings_it.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Cercati di recente
 Code=Codice 
 maxErrorMsg1=Il numero totale nel carrello è maggiore del massimo consentito
 maxErrorMsg2=. Non potrai acquistare finché non sarà risolto!
-logisticsMessage1=A causa dell'epidemia di covid, il tuo ordine verrà spedito il 20 febbraio 2021.
+logisticsMessage1=A causa dell'epidemia di covid, il tuo ordine verrà spedito il 15 febbraio 2021.
 logisticsMessage2=Ti daremo un ulteriore sconto del 10% per il tuo ordine a causa della spedizione ritardata.
+logisticsMessage3=Ha accettato i seguenti termini
+logisticsMessage4=1. Gli ordini verranno spediti a partire dal 15 febbraio 2021
+logisticsMessage5=2. Il rimborso per l'annullamento degli ordini verrà elaborato dopo il 15 febbraio 2021
+logisticsMessage6=A causa della situazione pandemica, scegliere i termini pertinenti
 
 # check_shipping=#controlla spedizione
 ShippingAddress=Indirizzo Spedizione
