--- a/locale/strings_nl.properties
+++ b/locale/strings_nl.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Laatst opgezocht
 Code=Code
 maxErrorMsg1=Het aantal items in uw winkelwagen is groter dan het toegestane maximumtotaal
 maxErrorMsg2=U kunt pas afrekenen nadat het probleem is opgelost!
-logisticsMessage1=Vanwege de covidepidemie wordt uw bestelling op 20 februari 2021 verzonden.
+logisticsMessage1=Vanwege de covidepidemie wordt uw bestelling op 15 februari 2021 verzonden.
 logisticsMessage2=We geven je 10% extra korting op je bestelling vanwege de vertraagde verzending.
+logisticsMessage3=Akkoord gegaan met de volgende voorwaarden
+logisticsMessage4=1. Bestellingen worden verzonden vanaf 15 februari 2021
+logisticsMessage5=2. Restitutie voor het annuleren van bestellingen wordt verwerkt na 15 februari 2021
+logisticsMessage6=Kies vanwege de pandemische situatie de relevante voorwaarden
 
 # check_shipping
 ShippingAddress=Verzend adres
