--- a/locale/strings_pl.properties
+++ b/locale/strings_pl.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Ostatnio oglądane
 Code=Kod 
 maxErrorMsg1=Liczba przedmiotów w koszyku jest większa niż dozwolona, maksymalna suma to
 maxErrorMsg2=. Zamówienie nie będzie mogło zostać zrealizowane zanim problem nie zostanie rozwiązany!
-logisticsMessage1=Z powodu epidemii COVID Twoje zamówienie zostanie wysłane 20 lutego 2021 roku.
+logisticsMessage1=Z powodu epidemii COVID Twoje zamówienie zostanie wysłane 15 lutego 2021 roku.
 logisticsMessage2=Damy Ci dodatkowe 10% zniżki na Twoje zamówienie z powodu opóźnionej wysyłki.
+logisticsMessage3=Zgodził się na poniższe warunki
+logisticsMessage4=1. Zamówienia będą wysyłane od 15 lutego 2021 roku
+logisticsMessage5=2. Zwrot kosztów anulowania zamówienia zostanie zrealizowany po 15 lutego 2021 roku
+logisticsMessage6=W związku z pandemią prosimy o wybranie odpowiednich terminów
 
 # check_shipping
 ShippingAddress=Adres odbiorcy przesyłki
