--- a/locale/strings_pt.properties
+++ b/locale/strings_pt.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Pesquisas recentes
 Code=Código
 maxErrorMsg1=O número de produtos na cesta é maior do total permitido de
 maxErrorMsg2=. Você não poderá pagar até resolver o problema.
-logisticsMessage1=Devido à epidemia de covid, seu pedido será enviado em 20 de fevereiro de 2021.
+logisticsMessage1=Devido à epidemia de covid, seu pedido será enviado em 15 de fevereiro de 2021.
 logisticsMessage2=Nós lhe daremos um desconto adicional de 10% para seu pedido devido ao atraso no envio.
+logisticsMessage3=Concordou com os seguintes termos
+logisticsMessage4=1. Os pedidos serão enviados a partir de 15 de fevereiro de 2021
+logisticsMessage5=2. Reembolso para cancelamento de pedidos será processado após 15 de fevereiro de 2021
+logisticsMessage6=Devido à situação de pandemia, escolha os termos relevantes
 
 # check_shipping
 ShippingAddress=Endereço de frete
