--- a/locale/strings_se.properties
+++ b/locale/strings_se.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Kollade nyss på
 Code=Kod
 maxErrorMsg1=Antalet överskrider det tillåtna maximala orderbeloppet av
 maxErrorMsg2=. Du får inte checka ut tills det har lösas!
-logisticsMessage1=På grund av covidepidemi skickas din beställning den 20 februari 2021.
+logisticsMessage1=På grund av covidepidemi skickas din beställning den 15 februari 2021.
 logisticsMessage2=Vi ger dig ytterligare 10% rabatt på din beställning på grund av den försenade leveransen.
+logisticsMessage3=Gick med på följande villkor
+logisticsMessage4=1. Beställningar skickas från och med den 15 februari 2021
+logisticsMessage5=2. Återbetalning för annullering av beställningar behandlas efter den 15 februari 2021
+logisticsMessage6=På grund av pandemisituationen, välj relevanta villkor
 
 # check_shipping
 ShippingAddress=Leveransadress
