--- a/locale/strings.properties
+++ b/locale/strings.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Recently browse
 Code=Code
 maxErrorMsg1=Your cart item count is greater than the allowed maximum total of
 maxErrorMsg2=. You will not be able to checkout until resolved!
-logisticsMessage1=Due to covid epidemic, your order will be shipped on February 20, 2021.
+logisticsMessage1=Due to covid epidemic, your order will be shipped on February 15, 2021.
 logisticsMessage2=We will give you an additional 10% discount for your order due to the delayed shipment.
+logisticsMessage3=Agreed to the following terms
+logisticsMessage4=1. Orders will be shipped from February 15, 2021
+logisticsMessage5=2. Refund for canceling orders will be processed after February 15, 2021
+logisticsMessage6=Due to the pandemic situation, please choose the relevant terms
 
 # check_shipping
 ShippingAddress=Shipping Address
