--- a/locale/strings_es.properties
+++ b/locale/strings_es.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Búsquedas recientes
 Code=Código
 maxErrorMsg1=La cantidad de productos en el carrito es mayor a la permitida
 maxErrorMsg2=. No podrá pagar hasta que se resuelva!
-logisticsMessage1=Debido a la epidemia de covid, su pedido se enviará el 20 de febrero de 2021.
+logisticsMessage1=Debido a la epidemia de covid, su pedido se enviará el 15 de febrero de 2021.
 logisticsMessage2=Le daremos un descuento adicional del 10% para su pedido debido al retraso en el envío.
+logisticsMessage3=Aceptó los siguientes términos
+logisticsMessage4=1. Los pedidos se enviarán a partir del 15 de febrero de 2021
+logisticsMessage5=2. El reembolso por cancelar pedidos se procesará después del 15 de febrero de 2021.
+logisticsMessage6=Debido a la situación de la pandemia, elija los términos relevantes
 
 # check_shipping
 ShippingAddress=Dirección de envío
