--- a/locale/strings_fr.properties
+++ b/locale/strings_fr.properties
@@ -164,8 +164,12 @@ RecentlyBrowseTitle=Récemment parcouru
 Code=Code
 maxErrorMsg1=Le nombre d'articles de votre panier est supérieur au total maximum autorisé de
 maxErrorMsg2=. Vous ne pourrez pas payer avant que ce soit résolu!
-logisticsMessage1=En raison de l'épidémie de covid, votre commande sera expédiée le 20 février 2021.
+logisticsMessage1=En raison de l'épidémie de covid, votre commande sera expédiée le 15 février 2021.
 logisticsMessage2=Nous vous offrirons une remise supplémentaire de 10% sur votre commande en raison du retard de l'expédition.
+logisticsMessage3=A accepté les conditions suivantes
+logisticsMessage4=1. Les commandes seront expédiées à partir du 15 février 2021
+logisticsMessage5=2. Le remboursement des annulations de commandes sera traité après le 15 février 2021
+logisticsMessage6=En raison de la situation pandémique, veuillez choisir les termes pertinents
 
 # check_shipping
 ShippingAddress=Adresse de livraison
